--- a/src/app.html
+++ b/src/app.html
@@ -2,6 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=0"
+		/>
+		<link rel="apple-touch-icon" sizes="any" href="/logo_512.png" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="manifest" href="/manifest.json" />
