--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1, minimum-scale=1, user-scalable=0"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
 		/>
 		<link rel="apple-touch-icon" sizes="any" href="/logo_512.png" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
